Wed Oct 22 21:07:32 2014  Yuki Yugui Sonoda  <yugui@yugui.jp>

	* common.mk (build-ext): avoid trying to build dynamic libraries
	  if configured --with-static-linked-ext.

Wed Oct 22 20:33:33 2014  Martin Duerst <duerst@it.aoyama.ac.jp>

	* common.mk: Fixed grammar in comment [ci skip]

Wed Oct 22 19:18:18 2014  Martin Duerst <duerst@it.aoyama.ac.jp>

	* tool/unicode_norm_gen.rb: Fixed escaping of backslash and
	  double quote ('\\\&' -> "\\\\\\\&"; double quoted string
	  is needed to make \& mean last match; double double
	  backslashes are needed because of two layers of escaping).

Wed Oct 22 18:13:29 2014  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/test-unicode_normalize.rb: as often said, ruby is sometimes built
	  at non-srcdir.

Wed Oct 22 18:12:12 2014  Martin Duerst <duerst@it.aoyama.ac.jp>

	* test/test-unicode_normalize.rb: Adjusted path for test
	  data file (now ../enc/unicode/data/NormalizationTest.txt).

Wed Oct 22 18:07:07 2014  Martin Duerst <duerst@it.aoyama.ac.jp>

	* test/test-unicode_normalize.rb: Removed explicit require,
	  changed method names, adjusted copyright.

Wed Oct 22 18:00:00 2014  Martin Duerst <duerst@it.aoyama.ac.jp>

	* test/test-unicode_normalize.rb: Importing from
	  https://github.com/duerst/eprun/blob/master/test/test_normalize.rb.
	  (removing trailing whitespace, fixing EOLs and adding EOL property)

Wed Oct 22 08:21:09 2014  Yuki Yugui Sonoda  <yugui@yugui.jp>

	* nacl/pepper_main.c (Instance_DidCreate): mount devfs and rebind fd 0
	  .. 2 so that stderr goes to the console of the browser.

Wed Oct 22 03:47:43 2014  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* ext/etc/etc.c (etc_nprocessors_affin): maximum "n" should be 16384.

Wed Oct 22 03:37:00 2014  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* ext/etc/etc.c (etc_nprocessors_affin): minor spell fix.

Wed Oct 22 03:33:58 2014  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* ext/etc/etc.c (etc_nprocessors_affin): optimize memory usege a